# stardust

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/include/: TestScene.h
Sandbox/src/: Main.cpp
Stardust/: CMakeLists.txt  premake5.lua
Stardust/include/stardust/: Stardust.h
Stardust/include/stardust/ai/: Boids.h  State.h  StateMachine.h
Stardust/include/stardust/animation/: Animation.h  Animator.h  Easings.h
Stardust/include/stardust/application/: AppConfig.h  Application.h
Stardust/include/stardust/assets/: AssetManager.h
Stardust/include/stardust/audio/: Audio.h  Listener.h  SoundCuePlayer.h  SoundSource.h  SoundSystem.h
Stardust/include/stardust/camera/: Camera2D.h
Stardust/include/stardust/config/: Config.h
Stardust/include/stardust/data/: Containers.h  MathTypes.h  Pointers.h  Types.h
Stardust/include/stardust/debug/: AssertHandler.h  Debug.h
Stardust/include/stardust/filesystem/: FileHandle.h  Filesystem.h
Stardust/include/stardust/geometry/: Shapes.h
Stardust/include/stardust/graphics/: Blending.h  Colour.h  Colours.h  Graphics.h  RenderArea.h  SortingLayer.h
Stardust/include/stardust/input/: AxisType.h  Input.h  InputController.h  InputManager.h
Stardust/include/stardust/locale/: Locale.h
Stardust/include/stardust/math/: Math.h
Stardust/include/stardust/memory/: MemoryBuffer.h  ObjectPool.h
Stardust/include/stardust/particles/: Particle.h  ParticleData.h  ParticleSystem.h
Stardust/include/stardust/physics/: AABB.h  Physics.h  RaycastHit.h
Stardust/include/stardust/preferences/: ControlPrefs.h  UserPrefs.h
Stardust/include/stardust/rect/: Rect.h
Stardust/include/stardust/scene/: Scene.h  SceneManager.h
Stardust/include/stardust/scripting/: ScriptEngine.h
Stardust/include/stardust/system/: System.h
Stardust/include/stardust/task/: Async.h  AsyncTask.h  MessagePasser.h  TaskStats.h
Stardust/include/stardust/text/: Glyph.h  Markup.h  Text.h  TextCache.h  TextWriter.h
Stardust/include/stardust/tilemap/: Tile.h  Tilemap.h  Tileset.h
Stardust/include/stardust/time/: Stopwatch.h  Time.h  Timeout.h  Timers.h
Stardust/include/stardust/types/: Containers.h  MathTypes.h  Pointers.h  Primitives.h
Stardust/include/stardust/ui/: Anchor.h  Canvas.h  UI.h  UIComponent.h
Stardust/include/stardust/utility/: Utility.h
Stardust/include/stardust/vfs/: VFS.h
Stardust/include/stardust/window/: Window.h
Stardust/src/: Stardust.cpp
Stardust/src/ai/: Boids.cpp  State.cpp  StateMachine.cpp
Stardust/src/ai/game_tree/: GameTree.cpp
Stardust/src/ai/state_machine/: State.cpp  StateMachine.cpp
Stardust/src/animation/: Animation.cpp  Animator.cpp  Easings.cpp
Stardust/src/animation/easings/: Easings.cpp
Stardust/src/application/: Application.cpp  ApplicationInitialisation.cpp
Stardust/src/application/events/: Events.cpp
Stardust/src/audio/: Listener.cpp  SoundCuePlayer.cpp  SoundSource.cpp  SoundSystem.cpp
Stardust/src/audio/device/: AudioDevice.cpp
Stardust/src/audio/listener/: Listener.cpp
Stardust/src/audio/mixing/: MixingBus.cpp
Stardust/src/audio/recording/: RecordingDevice.cpp
Stardust/src/audio/source/: PositionalSoundSource.cpp  SoundSource.cpp
Stardust/src/audio/volume/: VolumeManager.cpp
Stardust/src/camera/: Camera2D.cpp
Stardust/src/config/: Config.cpp
Stardust/src/data/: Containers.cpp
Stardust/src/debug/: Debug.cpp
Stardust/src/debug/assert/: Assert.cpp
Stardust/src/filesystem/: FileHandle.cpp  Filesystem.cpp
Stardust/src/graphics/: Colour.cpp  Graphics.cpp  RenderArea.cpp  SortingLayer.cpp
Stardust/src/input/: Input.cpp  InputController.cpp  InputManager.cpp
Stardust/src/locale/: Locale.cpp
Stardust/src/math/: Math.cpp
Stardust/src/memory/: MemoryBuffer.cpp
Stardust/src/particles/: ParticleSystem.cpp
Stardust/src/physics/: AABB.cpp
Stardust/src/preferences/: ControlPrefs.cpp  UserPrefs.cpp
Stardust/src/rect/: Rect.cpp
Stardust/src/scene/: Scene.cpp  SceneManager.cpp
Stardust/src/scripting/: ScriptEngine.cpp
Stardust/src/system/: System.cpp
Stardust/src/task/: TaskStats.cpp
Stardust/src/text/: Markup.cpp  Text.cpp  TextCache.cpp  TextWriter.cpp
Stardust/src/tilemap/: Tilemap.cpp  Tileset.cpp
Stardust/src/time/: Stopwatch.cpp  Time.cpp  Timeout.cpp  Timers.cpp
Stardust/src/ui/: Canvas.cpp  UI.cpp  UIComponent.cpp
Stardust/src/utility/: Utility.cpp
Stardust/src/vfs/: VFS.cpp
Stardust/src/window/: Window.cpp
benchmarks/: CMakeLists.txt
benchmarks/graph/src/: Main.cpp
benchmarks/string/src/: Main.cpp
dep/EASTL-3.17.03/: CMakeLists.txt
dep/Glad-0.1.34/: CMakeLists.txt
dep/Glad-0.1.34/src/: glad.c
dep/SoLoud-2020.02.07/: CMakeLists.txt  premake5.lua
dep/box2d-2.4.1/: CMakeLists.txt  premake5.lua
dep/cpu_features-0.6.0/: CMakeLists.txt
dep/hash_library-v8/: CMakeLists.txt
dep/lua-5.4.2/: CMakeLists.txt
dep/stb_image-2.26/: CMakeLists.txt
dep/stb_image-2.26/src/: STBImageImplementation.cpp
dep/stb_image_write-1.15/: CMakeLists.txt
dep/tinyxml2-8.1.0/: CMakeLists.txt
dep/tmxlite-1.2.1/: CMakeLists.txt  LICENSE
src/Sandbox/: CMakeLists.txt
src/Stardust/: CMakeLists.txt
tests/: CMakeLists.txt  premake5.lua
tests/colour/src/: Main.cpp
tests/config/: config_test.json
tests/config/src/: Main.cpp
tests/filesystem/resources/: test.json
tests/filesystem/src/: Main.cpp
tests/graph/src/: Main.cpp
tests/manual/audio/: premake5.lua
tests/manual/cursor/: premake5.lua
tests/manual/display/: premake5.lua
tests/manual/logger/: premake5.lua
tests/manual/message_box/: premake5.lua
tests/manual/rectangle_render/: premake5.lua
tests/manual/text_render/: premake5.lua
tests/rect/src/: Main.cpp
tests/string/src/: Main.cpp
tests/test_resources/fs_data/: b.txt  data.json  data.toml
tests/unit/asset_manager/: premake5.lua
tests/unit/colour/: premake5.lua
tests/unit/filesystem/: premake5.lua
tests/unit/global_resources/: premake5.lua
tests/unit/string/: premake5.lua
tests/unit/virtual_filesystem/: premake5.lua
tests/vfs/src/: Main.cpp
(+426 files in other folders)
